[package]
name = "shelf"
version = "0.1.0"
description = "cli tool for managing books"
authors = ["EthanJustice <47954690+EthanJustice@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/EthanJustice/shelf"
repository = "https://github.com/EthanJustice/shelf"
license = "MIT"
publish = false

[dependencies]
clap = "~2.33.3"
